--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                 font-size: 38px;
             }
             #chancesLeft {
-                font-size: 40px;
+                margin-left: 200px;
+                font-size: 45px;
             }
 
 
